Launch script now tune for performance
   add several JVM options for performace
   add debug options